# offline-audit-rag

./: .env.example  .gitignore  Modelfile  README.md  agent_cli.py  agent_webui.py  app.py  audit_rules.py  pyproject.toml  requirements.txt  summarize_audits.py  transcribe.py  transcribe_README.md  webui.py
agent_runtime/: __init__.py  demo_factory.py  evidence.py  models.py  planner.py  replay.py  runtime.py  session_store.py  session_validator.py  tools.py
archive/: test_data_change.txt  test_release_incident.txt
audit_core/: __init__.py  artifacts.py  config.py  file_ops.py  formatting.py  history.py  knowledge_base.py  model_io.py  models.py  pipeline.py  text_processing.py
capabilities/: __init__.py
capabilities/meeting_audit/: __init__.py  legacy.py  playbook.py  schemas.py  tools.py
capabilities/patent_research/: __init__.py  corpus.py  legacy_analysis.py  (+4 more)
changes/: changes.md
docs/: portfolio_semiconductor_ip.md
examples/: sample_audit_report.md  sample_meeting.txt  sample_portfolio_summary.md  sample_risk_items.csv  sample_tasks.csv
output/: test_release_incident_2026-06-03_14:47.csv  test_release_incident_2026-06-03_14:47.md
scripts/: __init__.py  benchmark_agent.py  playwright_agent_smoke.sh  validate_agent_session.py
tests/: test_agent_replay.py  test_agent_runtime.py  test_agent_security.py  test_agent_session_validator.py  test_agent_streamlit_app.py  test_agent_webui.py  test_app.py  test_benchmark_agent.py  test_meeting_agent.py  test_ollama_smoke.py  test_patent_research.py  test_refactor_compat.py
vector_store/: chroma.sqlite3
(+21 files in other folders)
