[project]
name = "offline-auto-audit"
version = "0.1.0"
description = "100% offline compliance auto auditing tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.6.2",
    "chromadb>=0.4.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
